fix(sonar): two real nits, and the reasons the rest stay
Two of the SonarCloud findings on the release PR are worth acting on. The rest
are not, and the difference is worth writing down once rather than re-deciding
every review.

- CommunityS3DownloadHandle: Math.clamp instead of nested min/max. Same result,
  and the intent — bound the HEAD figure by what the GET delivered — reads off
  the call now.
- InMemoryEventBus: the `continue` was the last statement in the loop body and
  did nothing. Replaced with an unnamed binding and a sentence saying the empty
  catch is deliberate, which is what the rule is actually asking for.

NOT changed, with reasons:

- FlowMigrationState.equals — "use the record pattern". On a six-component record
  carrying three arrays that makes equals longer and shadows the field names, and
  it breaks the deliberate mirroring with FlowSnapshot's equals. A style rule that
  costs readability is not an improvement.
- CoreFlowRuntime — "catch Exception instead of Error", twice. Both are the
  catch (RuntimeException | Error) around thread.start(), which exists precisely
  to absorb a refused thread creation. Catching Exception there would restore the
  capacity leak the previous PR fixed.
- NativeTcpStream:340 — "remove this close(), try-with-resources handles it". It
  does not: the TWR releases the allocation's ref and this close() releases the
  one retain() took. Two refs, two releases. The analyzer does not model
  refcounting.
- NativeTcpStream:799 — "may throw a NullPointerException", open for two months.
  Also false, and the reason it cannot be discharged statically is the interesting
  part: reaching it needs `completed` from poll() AND `expectedHead` to be null
  together, and the caller's loop runs `while (pending != null)`, so expectedHead
  never is. A null poll() therefore fails Objects.equals and throws
  IllegalStateException before the close(). The guard is an identity check the
  analyzer cannot read as a null check, on a qu